Altered index.html to give brief list of articles, sorted by date, on each page.  Ugly right now, but makes the page a lot more useful.

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,12 @@
 {% block content_title %}{% endblock %}
 {% block content %}
 
+<dl>
+{% for article in dates %}
+    <dd>{{ article.locale_date}} <a href='{{article.url}}'>{{article.title}}</a></dd>
+{% endfor %}
+</dl>
+
     {% if articles %}
     {% for article in articles_page.object_list %}        
 
