--- a/templates/article_infos.html
+++ b/templates/article_infos.html
@@ -3,11 +3,13 @@
                 {{ article.locale_date }}
         </abbr>
 
-        {% if article.author %}
+<!-- (Put this section in if you want the author name on every page
+       {% if article.author %}
         <address class="vcard author">
                 By <a class="url fn" href="{{ SITEURL }}/author/{{ article.author }}.html">{{ article.author }}</a>
         </address>
-        {% endif %}
+        {% endif %}   -->
+
 <p>In <a href="{{ SITEURL }}/category/{{ article.category }}.html">{{ article.category }}</a>. {% if PDF_PROCESSOR %}<a href="{{ SITEURL }}/pdf/{{ article.slug }}.pdf">get the pdf</a>{% endif %}</p>
 {% include 'taglist.html' %}
 {% include 'translations.html' %}
