Fixed article.url issue in top listing of articles from index.html.  Discovered that a symlink to the theme directory is better than copying the theme to the pelican--themes dir.

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,11 @@
 {% block content %}
 
 <dl>
-{% for article in dates %}
-    <dd>{{ article.locale_date}} <a href='{{article.url}}'>{{article.title}}</a></dd>
+{% if articles %}
+{% for article in articles_page.object_list %}
+    <dd>{{ article.locale_date}} <a href='{{ SITEURL }}/{{article.url}}'>{{article.title}}</a></dd>
 {% endfor %}
+{% endif %}
 </dl>
 
     {% if articles %}
